[package]
name = "kernel-fft-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.1"
ndarray = "0.15.4"
ndarray-rand = "0.14.0"
rand = "0.8.5"
rustfft = "6.0.1"
mimalloc = { version = "*", default-features = false }
ndarray-stats = "0.5.0"
rustdct = "0.7.0"
transpose = "0.2.1"
rayon = "1.5.1"
fftw = "0.7.0"

#[build]
#rustflags = ["-C", "target-feature=+avx,+mmx,+sse,+sse2,+avx2,+fma", "target-cpu=native"]

[profile.release]
opt-level = 3
#lto = "fat"
#codegen-units = 1
